# N-Body

./: .gitignore  GLUtil.cpp  GLUtil.h  N-Body.sln  N-Body.vcxproj  README.md  fmm_simulation_gl.cu  glTest.cu  glad.c  main.cu  nbody.avi  profile.sh
BH/: BH.sln  BH.vcxproj  Barnes-Hut_Algorithm_Analysis.md  README.md  barnesHutCuda.cu  barnesHutCuda.cuh  barnesHut_kernel.cu  barnesHut_kernel.cuh  constants.h  err.h  main.cu  run_benchmarks.sh
FMM/: .nfs0000000009c313a500000087  CMakeLists.txt  FMMTest.sln  FMMTest.vcxproj  constants.h  err.h  fastMultipoleCuda.cu  fastMultipoleCuda.cuh  fastMultipole_kernel.cu  fastMultipole_kernel.cuh  main.cu  performance_results.csv  run_benchmarks.sh
FMM/benchmark_results/: consolidated_benchmarks.csv
naive/: CMakeLists.txt  NBodyNaive.sln  NBodyNaive.vcxproj  constants.h  err.h  naive.cu  run_naive_benchmarks.sh
